add search by id field

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,14 @@
-== README
+XMMS2
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+  Need
+    libasound2-dev
+    libpulse-dev
+    libmad0-dev
+    libflac-dev
+    libvorbis-dev
+    
+  ./waf configure \
+    --with-plugins=alsa,pulse,file,flac,mad,mp4,id3v2,vorbis,wave \
+    --with-optionals=launcher,nycli,ruby \
+    --with-default-output-plugin=alsa \
+    --with-ruby-binary=/usr/local/bin/ruby
